# tekkneeca

./: .gitignore  README.md
docker/: Dockerfile  README.md  commands.bashrc  docker-compose.yml  docker_build.sh  docker_run.sh  docker_run_camera_only.sh  docker_run_no_arduino.sh  docker_run_sim.sh  docker_run_sim_nogpu.sh  docker_terminal.sh  entrypoint.sh  get_ckpts.sh  shell.sh  tekkneeka.sh
lbr_fri_ros2_stack/lbr_demos/lbr_demos_fri_ros2_python/: setup.py
lbr_fri_ros2_stack/lbr_moveit_config/med7_moveit_config/: .setup_assistant
lbr_fri_ros2_stack/lbr_ros2_control/config/: lbr_controllers.yaml
log/: latest_list
src/: moveit.rviz  paradocs_svd.sh  scene.xml  sim3.py  tek.sh  vis.py
src/bonesim/: depth.py  femur.stl  femur_full.stl  load_scene.py  recording_scene.py  scene.xml
src/co-tracker/: online_demo.py
src/co-tracker/cotracker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/ocs2/pinocchio/: CMakeLists.txt
src/paradocs_calibration/: CMakeLists.txt  package.xml
src/paradocs_calibration/calib_data_dump/: bad_intrinsics.json  worse_intrinsics.json
src/paradocs_calibration/src/: charuco_pose_publisher.py  test_goal_pose_publisher.py
src/paradocs_control/: CMakeLists.txt  package.xml
src/paradocs_control/behavior_tree_code/: arduino_bt.cpp  bt_main.cpp  bt_svd.xml  drill_bt.cpp  drill_bt.xml
src/paradocs_control/config/: eih_cam1.calib  eih_cam1_2mm.calib  eih_cam1_SVD.calib  eih_cam2.calib  robot_motion_planning.yaml  sensors_3d.yaml
src/paradocs_control/include/: RRTConnect.h
src/paradocs_control/launch/: drill_node.launch.py  rs_dual_camera_launch.py  rs_launch.py  static_obstacles.launch.py  tek_full.launch.py  tek_full_move_group.launch.py  tek_full_pilz.launch.py  tek_full_pilz_hybrid.launch.py  tek_sim.launch.py  tek_sim_move_group.launch.py  tek_sim_pilz.launch.py  tek_sim_pilz_hybrid.launch.py  tekkneeca.launch.py  tekkneeca_only_405.launch.py  tekkneeca_sim.launch.py  temp.launch.py
src/paradocs_control/scripts/: drill_pose_transformer.py  dynamic_obstacle_publisher.py  pose_publisher.py
src/paradocs_control/src/: RRTConnect.cpp  planner.cpp  static_obstacles.cpp
src/paradocs_planning/: CMakeLists.txt  package.xml
src/paradocs_planning/config/: global_planner.yaml  global_planner_pilz.yaml  hybrid_planning_manager.yaml  local_planner.yaml  move_group_interface.yaml  robot_motion_planning.yaml
src/paradocs_planning/launch/: hybrid_planning_demo.launch.py  test_continuous_motion_clean.launch.py  test_hybrid.launch.py  test_hybrid_clean.launch.py  test_realistic_motion.launch.py  test_single_point_clean.launch.py
src/paradocs_planning/plugins/: motion_compensation_plugin.xml  pilz_planning_pipeline_plugin.xml
src/paradocs_planning/scripts/: continuous_pose_publisher.py  drill_pose_publisher.py  realistic_pose_publisher.py  rosbag_tf_broadcaster.py  single_pose_script.py
src/paradocs_planning/src/: mgi_node.cpp  robot_motion_planning.cpp
src/paradocs_planning/src/global_planner/global_planner_component/include/moveit/global_planner/: global_planner_component.h
src/paradocs_planning/src/global_planner/global_planner_component/src/: global_planner_component.cpp
src/paradocs_planning/src/global_planner/global_planner_plugins/: CMakeLists.txt
src/paradocs_planning/src/global_planner/global_planner_plugins/include/moveit/global_planner/: moveit_planning_pipeline.h  pilz_planning_pipeline.h
src/paradocs_planning/src/global_planner/global_planner_plugins/src/: moveit_planning_pipeline.cpp  moveit_planning_pipeline_liwei.cpp  moveit_planning_pipeline_param.cpp  moveit_planning_pipeline_shivangi.cpp  pilz_planning_pipeline.cpp
src/paradocs_planning/src/hybrid_planning_manager/hybrid_planning_manager_component/include/moveit/hybrid_planning_manager/: hybrid_planning_events.h  hybrid_planning_manager.h  planner_logic_interface.h
src/paradocs_planning/src/hybrid_planning_manager/hybrid_planning_manager_component/src/: hybrid_planning_manager.cpp
src/paradocs_planning/src/hybrid_planning_manager/planner_logic_plugins/: CMakeLists.txt
src/paradocs_planning/src/hybrid_planning_manager/planner_logic_plugins/include/moveit/planner_logic_plugins/: motion_compensation.h
src/paradocs_planning/src/hybrid_planning_manager/planner_logic_plugins/src/: motion_compensation.cpp
src/paradocs_planning/src/local_planner/local_constraint_solver_plugins/include/moveit/local_constraint_solver_plugins/: forward_trajectory.h
src/paradocs_planning/src/local_planner/local_constraint_solver_plugins/src/: forward_trajectory.cpp
src/paradocs_planning/src/local_planner/local_planner_component/include/moveit/local_planner/: local_constraint_solver_interface.h  local_planner_component.h  trajectory_operator_interface.h
src/paradocs_planning/src/local_planner/local_planner_component/src/: local_planner_component.cpp
src/paradocs_planning/src/local_planner/trajectory_operator_plugins/include/moveit/trajectory_operator_plugins/: simple_sampler.h
src/paradocs_planning/src/local_planner/trajectory_operator_plugins/src/: simple_sampler.cpp
src/paradocs_planning/src/test/: CMakeLists.txt  continuous_motion_demo.cpp  hybrid_planning_demo_node.cpp
src/parasight/: README.md  package.xml  setup.cfg  setup.py
src/parasight/parasight/: cli_client.py  hello_world.py  host.py  registration.py  sam_ui.py  segment_ui.py  tracker.py  utils.py
src/parasight/resource/: plan_config.yaml  plan_config_v2.yaml  tibia_shell.ply
src/parasight_interfaces/: CMakeLists.txt  package.xml
src/parasight_interfaces/msg/: TrackedPoints.msg
src/parasight_interfaces/srv/: StartTracking.srv  StopTracking.srv
src/regpipe_ros/: setup.py
src/regpipe_ros/regpipe_ros/: lean_pipeline.py  pcd_regpipe.py  pcd_sampipe.py  rgb_tracker.py  sam_clicker.py
src/rosbag2_2024_10_30-02_40_01/: metadata.yaml
src/rviz2-panel/: rviz2_plugin.xml
src/rviz2-panel/resource/: push_button.ui
src/rviz2-panel/rviz2/: config.rviz
src/rviz2-panel/src/: rviz2_panel.cpp
src/segment-anything-2/checkpoints/: download_ckpts.sh
src/serialcomm/serialcomm/: write_to_serial.py
(+52 files in other folders)
