<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>paradocs_planning</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="paradocs@todo.todo">paradocs</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>

  <depend>moveit_common</depend>
  <depend>ament_index_cpp</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>
  <depend>std_srvs</depend>
  <depend>tf2_ros</depend>
  <depend>trajectory_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <paradocs_planning plugin="${prefix}/plugins/simple_sampler_plugin.xml"/>
    <paradocs_planning plugin="${prefix}/plugins/replan_invalidated_trajectory_plugin.xml"/>
    <paradocs_planning plugin="${prefix}/plugins/single_plan_execution_plugin.xml"/>
    <paradocs_planning plugin="${prefix}/plugins/forward_trajectory_plugin.xml"/>
  </export>
</package>
